@@ -1,5 +1,5 @@
 /*
- Copyright (c) 2002, 2010, Oracle and/or its affiliates. All rights reserved.
+ Copyright (c) 2002, 2013, Oracle and/or its affiliates. All rights reserved.
  
 
   The MySQL Connector/J is licensed under the terms of the GPLv2
@@ -19,7 +19,6 @@
   You should have received a copy of the GNU General Public License along with this
   program; if not, write to the Free Software Foundation, Inc., 51 Franklin St, Fifth
   Floor, Boston, MA 02110-1301  USA
-
  */
 
 package com.mysql.jdbc;
@@ -89,5 +88,16 @@ public class JDBC4DatabaseMetaDataUsingInfoSchema extends DatabaseMetaDataUsingI
 
 	protected int getJDBC4FunctionNoTableConstant() {
 		return functionNoTable;
+	}
+	
+	/**
+	 * This method overrides DatabaseMetaData#getColumnType(boolean, boolean, boolean, boolean).
+	 * 
+	 * @see JDBC4DatabaseMetaData#getProcedureOrFunctionColumnType(boolean, boolean, boolean, boolean)
+	 */
+	protected int getColumnType(boolean isOutParam, boolean isInParam, boolean isReturnParam,
+			boolean forGetFunctionColumns) {
+		return JDBC4DatabaseMetaData.getProcedureOrFunctionColumnType(isOutParam, isInParam, isReturnParam,
+				forGetFunctionColumns);
 	}
 }
